@@ -22,8 +22,10 @@
 
 #include <glib.h>
 #include <gtk/gtk.h>
+#include <glib/gi18n.h>
 
 #include "wireless-security.h"
+#include "eap-method.h"
 
 GType
 wireless_security_get_g_type (void)
@@ -199,5 +201,174 @@ ws_wpa_fill_default_ciphers (NMConnection *connection)
 	s_wireless_sec->group = g_slist_append (s_wireless_sec->group, g_strdup ("wep104"));
 	s_wireless_sec->group = g_slist_append (s_wireless_sec->group, g_strdup ("tkip"));
 	s_wireless_sec->group = g_slist_append (s_wireless_sec->group, g_strdup ("ccmp"));
+}
+
+void
+ws_802_1x_add_to_size_group (WirelessSecurity *sec,
+                             GtkSizeGroup *size_group,
+                             const char *label_name,
+                             const char *combo_name)
+{
+	GtkWidget *widget;
+	GtkTreeModel *model;
+	GtkTreeIter iter;
+	EAPMethod *eap;
+
+	widget = glade_xml_get_widget (sec->xml, label_name);
+	g_assert (widget);
+	gtk_size_group_add_widget (size_group, widget);
+
+	widget = glade_xml_get_widget (sec->xml, combo_name);
+	g_assert (widget);
+
+	model = gtk_combo_box_get_model (GTK_COMBO_BOX (widget));
+	gtk_combo_box_get_active_iter (GTK_COMBO_BOX (widget), &iter);
+	gtk_tree_model_get (model, &iter, AUTH_METHOD_COLUMN, &eap, -1);
+	g_assert (eap);
+	eap_method_add_to_size_group (eap, size_group);
+	eap_method_unref (eap);
+}
+
+gboolean
+ws_802_1x_validate (WirelessSecurity *sec, const char *combo_name)
+{
+	GtkWidget *widget;
+	GtkTreeModel *model;
+	GtkTreeIter iter;
+	EAPMethod *eap = NULL;
+	gboolean valid = FALSE;
+
+	widget = glade_xml_get_widget (sec->xml, combo_name);
+	g_assert (widget);
+
+	model = gtk_combo_box_get_model (GTK_COMBO_BOX (widget));
+	gtk_combo_box_get_active_iter (GTK_COMBO_BOX (widget), &iter);
+	gtk_tree_model_get (model, &iter, AUTH_METHOD_COLUMN, &eap, -1);
+	g_assert (eap);
+	valid = eap_method_validate (eap);
+	eap_method_unref (eap);
+	return valid;
+}
+
+void
+ws_802_1x_auth_combo_changed (GtkWidget *combo,
+                              WirelessSecurity *sec,
+                              const char *vbox_name,
+                              GtkSizeGroup *size_group)
+{
+	GtkWidget *vbox;
+	EAPMethod *eap = NULL;
+	GList *elt, *children;
+	GtkTreeModel *model;
+	GtkTreeIter iter;
+	GtkWidget *eap_widget;
+
+	vbox = glade_xml_get_widget (sec->xml, vbox_name);
+	g_assert (vbox);
+
+	/* Remove any previous wireless security widgets */
+	children = gtk_container_get_children (GTK_CONTAINER (vbox));
+	for (elt = children; elt; elt = g_list_next (elt))
+		gtk_container_remove (GTK_CONTAINER (vbox), GTK_WIDGET (elt->data));
+
+	model = gtk_combo_box_get_model (GTK_COMBO_BOX (combo));
+	gtk_combo_box_get_active_iter (GTK_COMBO_BOX (combo), &iter);
+	gtk_tree_model_get (model, &iter, AUTH_METHOD_COLUMN, &eap, -1);
+	g_assert (eap);
+
+	eap_widget = eap_method_get_widget (eap);
+	g_assert (eap_widget);
+
+	if (size_group)
+		eap_method_add_to_size_group (eap, size_group);
+	gtk_container_add (GTK_CONTAINER (vbox), eap_widget);
+
+	eap_method_unref (eap);
+
+	wireless_security_changed_cb (combo, WIRELESS_SECURITY (sec));
+}
+
+GtkWidget *
+ws_802_1x_auth_combo_init (WirelessSecurity *sec,
+                           const char *glade_file,
+                           const char *combo_name,
+                           GCallback auth_combo_changed_cb)
+{
+	GtkWidget *combo;
+	GtkListStore *auth_model;
+	GtkTreeIter iter;
+	EAPMethodTLS *em_tls;
+	EAPMethodLEAP *em_leap;
+	EAPMethodTTLS *em_ttls;
+
+	auth_model = gtk_list_store_new (2, G_TYPE_STRING, eap_method_get_g_type ());
+
+	em_tls = eap_method_tls_new (glade_file, sec);
+	gtk_list_store_append (auth_model, &iter);
+	gtk_list_store_set (auth_model, &iter,
+	                    AUTH_NAME_COLUMN, _("TLS"),
+	                    AUTH_METHOD_COLUMN, em_tls,
+	                    -1);
+	eap_method_unref (EAP_METHOD (em_tls));
+
+	em_leap = eap_method_leap_new (glade_file, sec);
+	gtk_list_store_append (auth_model, &iter);
+	gtk_list_store_set (auth_model, &iter,
+	                    AUTH_NAME_COLUMN, _("LEAP"),
+	                    AUTH_METHOD_COLUMN, em_leap,
+	                    -1);
+	eap_method_unref (EAP_METHOD (em_leap));
+
+	em_ttls = eap_method_ttls_new (glade_file, sec);
+	gtk_list_store_append (auth_model, &iter);
+	gtk_list_store_set (auth_model, &iter,
+	                    AUTH_NAME_COLUMN, _("Tunneled TLS"),
+	                    AUTH_METHOD_COLUMN, em_ttls,
+	                    -1);
+	eap_method_unref (EAP_METHOD (em_ttls));
+
+	combo = glade_xml_get_widget (sec->xml, combo_name);
+	g_assert (combo);
+
+	gtk_combo_box_set_model (GTK_COMBO_BOX (combo), GTK_TREE_MODEL (auth_model));
+	g_object_unref (G_OBJECT (auth_model));
+	gtk_combo_box_set_active (GTK_COMBO_BOX (combo), 0);
+
+	g_signal_connect (G_OBJECT (combo), "changed", auth_combo_changed_cb, sec);
+
+	return combo;
+}
+
+void
+ws_802_1x_fill_connection (WirelessSecurity *sec,
+                           const char *combo_name,
+                           NMConnection *connection)
+{
+	GtkWidget *widget;
+	NMSettingWireless *s_wireless;
+	NMSettingWirelessSecurity *s_wireless_sec;
+	EAPMethod *eap = NULL;
+	GtkTreeModel *model;
+	GtkTreeIter iter;
+
+	s_wireless = (NMSettingWireless *) nm_connection_get_setting (connection, NM_SETTING_WIRELESS);
+	g_assert (s_wireless);
+
+	if (s_wireless->security)
+		g_free (s_wireless->security);
+	s_wireless->security = g_strdup (NM_SETTING_WIRELESS_SECURITY);
+
+	/* Blow away the old security setting by adding a clear one */
+	s_wireless_sec = (NMSettingWirelessSecurity *) nm_setting_wireless_security_new ();
+	nm_connection_add_setting (connection, (NMSetting *) s_wireless_sec);
+
+	widget = glade_xml_get_widget (sec->xml, combo_name);
+	model = gtk_combo_box_get_model (GTK_COMBO_BOX (widget));
+	gtk_combo_box_get_active_iter (GTK_COMBO_BOX (widget), &iter);
+	gtk_tree_model_get (model, &iter, AUTH_METHOD_COLUMN, &eap, -1);
+	g_assert (eap);
+
+	eap_method_fill_connection (eap, connection);
+	eap_method_unref (eap);
 }
 
