@@ -1,3 +1,12 @@
+2007-10-22  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-security/wireless-security.c
+	  src/wireless-security/wireless-security.h
+		- (ws_802_1x_auth_combo_init, ws_802_1x_auth_combo_changed,
+		   ws_802_1x_validate, ws_802_1x_add_to_size_group,
+		   ws_802_1x_fill_connection): genericize 802.1x-related methods so that
+			both WPA-EAP and Dynamic WEP can use them
+
 2007-10-21  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
